- Fixed children overflow - Added visual relations back (needs work)

--- a/static/styles/styles.css
+++ b/static/styles/styles.css
@@ -7,12 +7,40 @@
 }
 
 body {
-    margin: 10%;
     background: var(--clr);
     color: var(--text-clr);
     font-family: 'Montserrat';
     font-size: var(--height);
+    white-space: nowrap;
+    width: fit-content;
+    padding: 10%;
 }
+
+/* Toolbar */
+.toolbar {
+    position: fixed;
+    bottom: 50px;
+    right: 50px;
+}
+.toolbar .tool {
+    width: 60px;
+    height: 60px;
+    background-color: #28293d;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 15px;
+    transition: all .2s;
+}
+.toolbar i {
+    font-size: 40px;
+    color: #1c1c27;
+}
+.toolbar .tool:hover {
+    cursor: pointer;
+    transform: scale(1.2);
+}
+
 
 i {
     color: var(--clr-acc);
@@ -83,88 +111,45 @@ i.fas.fa-paw:hover {
 }
 
 /* Relations */
-.sibling-relation {
-    width: 80px;
+.bottom-top {
     display: flex;
-    align-items: center;
-}
-.sibling-relation hr {
-    width: 80%;
-    border: none;
-    border-radius: 10px;
-    border-top: 5px solid var(--clr-acc);
-}
-.sibling-relation hr:hover {
-    border-top: 5px solid #56eaa1;
-    transition: 0.2s all linear;
-}
-
-.partner-relation {
-    width: 80px;
-    display: flex;
-    align-items: center;
     justify-content: center;
 }
-
-.parent-relation-vertical {
-    height: 64px;
-    line-height: 64px;
-}
-.parent-relation-vertical span {
-    border-left: 5px solid var(--clr-acc);
+.bottom-top div {
+    border-left: 5px solid #28293d;
     transition: 0.2s all linear;
-    border-radius: 10px;
-    font-size: 32px;
+    height: 100%;
 }
-.parent-relation-vertical span:hover {
+.bottom-top div:hover {
     border-left: 5px solid #6798ff;
 }
 
-.parent-relation-right,
-.parent-relation-left,
-.parent-relation-horizontal-left,
-.parent-relation-horizontal-right {
-    align-items: center;
-    height: 64px;
+.bottom-to-right {
+    margin: 0 0 0 50%;
 }
-.parent-relation-right div {
-    width: 50%;
-    border-top: 5px solid var(--clr-acc);
-    border-right: 5px solid var(--clr-acc);
-    border-radius: 0px 10px 0px 0px;
+.bottom-to-right div {
+    border-radius: 10px 0px 0px 0px;
+    border-top: 5px solid #28293d;
+    border-left: 5px solid #28293d;
     transition: 0.2s all linear;
-    height: 32px;
+    height: 100%;
 }
-.parent-relation-right div:hover {
+.bottom-to-right div:hover {
+    border-top: 5px solid #6798ff;
+    border-left: 5px solid #6798ff;
+} 
+
+.bottom-to-left {
+    margin: 0 50% 0 0;
+}
+.bottom-to-left div {
+    border-radius: 0px 10px 0px 0px;
+    border-top: 5px solid #28293d;
+    border-right: 5px solid #28293d;
+    transition: 0.2s all linear;
+    height: 100%;
+}
+.bottom-to-left div:hover {
     border-top: 5px solid #6798ff;
     border-right: 5px solid #6798ff;
-}
-.parent-relation-left div {
-    margin-left: 50%;
-    width: 50%;
-    border-top: 5px solid var(--clr-acc);
-    border-left: 5px solid var(--clr-acc);
-    border-radius: 10px 0px 0px 0px;
-    transition: 0.2s all linear;
-    height: 32px;
-}
-.parent-relation-left div:hover {
-    border-top: 5px solid #6798ff;
-    border-left: 5px solid #6798ff;
-}
-
-.parent-relation-horizontal-right div {
-    margin-left: 50%;
-}
-
-.parent-relation-horizontal-left div,
-.parent-relation-horizontal-right div {
-    width: 50%;
-    border-top: 5px solid var(--clr-acc);
-    transition: 0.2s all linear;
-    height: 32px;
-}
-.parent-relation-horizontal-left div:hover, 
-.parent-relation-horizontal-right div:hover {
-    border-top: 5px solid #6798ff;
 }
